@@ -1,0 +1,1 @@
+cdecl @ @ -xknr @ explain f(x) @ 0
