@@ -16,6 +16,13 @@ with their complete changes, see the AUTHORS file.
 K&R C now has a set of predefined `typedef` declarations distinct from C89 that
 include only those shown in the first edition of _The C Programming Language_.
 
+** K&R C functions
+Implicit `int` functions in K&R C are now supported:
+
+    cdecl> set knrc
+    cdecl> explain f(x)
+    declare f as function (x) returning int
+
 ** Language-version-specific help
 Help is now specific to particular language versions, not just C or C++.
 
